# ill_tool

./: .gitignore  pyproject.toml
docs/: adding-tools.md  architecture.md  ill-tool-features.md  jsx-guide.md
scripts/: build-npm.sh  circular_maze.jsx  fetch_reference_images.py  maze.jsx  void_engine_compose.jsx  void_engine_lib.jsx  void_machine_composer.jsx  void_machine_generate.jsx  void_machine_lib.jsx  void_run_01_setup.jsx  void_run_02_cylinders.jsx  void_run_03_housings.jsx  void_run_04_connections.jsx  void_run_05_sections.jsx  void_run_06_typography.jsx  void_run_07_ortho.jsx  void_style_dr.jsx  void_style_manual.jsx  void_v3_compose.jsx  void_v3_lib.jsx
src/adobe_mcp/: tokens.py
src/adobe_mcp/apps/: __init__.py
src/adobe_mcp/apps/common/: __init__.py  compare.py  models.py  tools.py
src/adobe_mcp/apps/illustrator/: __init__.py  active_learning.py  analyze_reference.py  anticipation_markers.py  asset_versioning.py  batch_rig.py  chain_detector.py  color_region_cluster.py  connection_detector.py  constraint_system.py  contour_nesting.py  contour_scanner.py  correction_learning.py  cross_object_patterns.py  cv_confidence.py  deformation_zones.py  failure_detection.py  form_3d_projection.py  hierarchy_builder.py  hierarchy_templates.py  ik_chain_auto.py  image_trace.py  interaction_zones.py  joint_geometry.py  lod_system.py  models.py  motion_path_from_hierarchy.py  motion_range_from_shape.py  object_classifier.py  object_hierarchy.py  part_questioner.py  part_segmenter.py  part_size_ranker.py  physics_hints.py  pose_library_generic.py  reference_underlay.py  relationship_types.py  scene_graph.py  secondary_motion.py  symmetry_detector.py  (+8 more)
src/adobe_mcp/jsx/: snippets.py
tests/: smoke_test.py  test_active_learning.py  test_anticipation_markers.py  test_asset_versioning.py  test_batch_rig.py  test_chain_detector.py  test_color_region_cluster.py  test_connection_detector.py  test_constraint_system.py  test_contour_nesting.py  test_contour_scanner.py  test_correction_learning.py  test_cross_object_patterns.py  test_cv_confidence.py  test_deformation_zones.py  test_exposure_voting.py  test_failure_detection.py  test_form_3d_projection.py  test_hierarchy_builder.py  test_hierarchy_templates.py  test_ik_chain_auto.py  test_interaction_zones.py  test_joint_geometry.py  test_lod_system.py  test_motion_path_from_hierarchy.py  test_motion_range_from_shape.py  test_object_classifier.py  test_object_hierarchy.py  test_part_questioner.py  test_part_segmenter.py  test_part_size_ranker.py  test_physics_hints.py  test_pose_library_generic.py  test_relationship_types.py  test_scene_graph.py  test_secondary_motion.py  test_symmetry_detector.py  test_template_export.py  test_template_inheritance.py  test_template_library_search.py  (+4 more)
thoughts/: mech-extraction-notes.md
