[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ill-tool"
version = "0.2.0"
description = "Illustration-to-production pipeline: draw, rig, animate, storyboard via Adobe Creative Cloud MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "rydersd" },
]
keywords = ["mcp", "adobe", "illustration", "storyboard", "rigging", "animation", "3d", "vector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "opencv-python-headless>=4.13.0.92",
    "vtracer>=0.6.15",
    "numpy>=2.2.6",
    "shapely>=2.1.2",
]

[project.scripts]
adobe-mcp = "adobe_mcp.server:main"
adobe-mcp-ps = "adobe_mcp.apps.photoshop.server:main"
adobe-mcp-ai = "adobe_mcp.apps.illustrator.server:main"
adobe-mcp-pr = "adobe_mcp.apps.premiere.server:main"
adobe-mcp-ae = "adobe_mcp.apps.aftereffects.server:main"
adobe-mcp-id = "adobe_mcp.apps.indesign.server:main"

[project.entry-points."mcp.servers"]
adobe-mcp = "adobe_mcp.server"

[project.urls]
Homepage = "https://github.com/rydersd/ill_tool"
Repository = "https://github.com/rydersd/ill_tool"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
ml = [
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.40",
]
ml-3d = [
    "torch>=2.0",
    "trimesh>=4.0",
    "open3d>=0.18",
]
timeline = [
    "opentimelineio>=0.17",
]
all = [
    "ill-tool[test,ml,ml-3d,timeline]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "ai: requires live Adobe Illustrator",
    "ae: requires live Adobe After Effects",
]

[tool.setuptools.packages.find]
where = ["src"]
